force-app/main/default/objects/CartAccount__c/CartAccount__c.object-meta.xml
<CustomObject>
    <description>Armazena registros de ofertas aceitas e estatísticas de acesso aos registros de Account.</description>
    <label>Oferta Oferecida</label>
    <nameField>
        <displayFormat>OF-{00000000}</displayFormat>
        <label>Id Oferta Oferecida</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ofertas Oferecidas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>