force-app/main/default/objects/CartAccount__c/fields/Accepted__c.field-meta.xml
<CustomField>
    <fullName>Accepted__c</fullName>
    <description>Campo para salvar se oferta NBA/NBO  foi aceita ou se o script foi aceito.</description>
    <label>Aceite</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
                <label>Aceitou</label>
            </value>
            <value>
                <fullName>NotAccepted</fullName>
                <label>Não aceitou</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>