force-app/main/default/objects/CartAccount__c/fields/AcceptedScript__c.field-meta.xml
<CustomField>
    <fullName>AcceptedScript__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para controle de que operador passou pelo Script de Alta Móvel e o cliente aceitou o mesmo.</description>
    <label>Script aceito</label>
    <type>Checkbox</type>
</CustomField>