force-app/main/default/objects/CartAccount__c/fields/AccountAdressId__c.field-meta.xml
<CustomField>
    <fullName>AccountAdressId__c</fullName>
    <description>Campo para armazenar o ID do endereço do cliente consultado no SRE.</description>
    <label>Id Endereço Cliente</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>