force-app/main/default/objects/CartAccount__c/fields/AccountAdressType__c.field-meta.xml
<CustomField>
    <fullName>AccountAdressType__c</fullName>
    <description>Campo para armazenar o tipo de logradouro do endereço do cliente consultado no SRE.</description>
    <label>Tipo de Logradouro Cliente</label>
    <length>40</length>
    <type>Text</type>
</CustomField>