force-app/main/default/objects/CartAccount__c/fields/AccountCity__c.field-meta.xml
<CustomField>
    <fullName>AccountCity__c</fullName>
    <description>Campo para armazenar a cidade do endereço do cliente consultado no SRE.</description>
    <label>Cidade Cliente</label>
    <length>40</length>
    <type>Text</type>
</CustomField>