force-app/main/default/objects/CartAccount__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo de relacionamento com a Conta em que foi executada a ação.</description>
    <label>Conta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Ofertas Oferecidas</relationshipLabel>
    <relationshipName>CartAccount</relationshipName>
    <type>Lookup</type>
</CustomField>