force-app/main/default/objects/CartAccount__c/fields/AccountName__c.field-meta.xml
<CustomField>
    <fullName>AccountName__c</fullName>
    <description>Campo para apresentar o nome do cliente na configuração da venda e envio ao RPA.</description>
    <formula>AccountId__r.vlocity_cmt__PersonContactId__r.FirstName+&apos;&apos;+ AccountId__r.vlocity_cmt__PersonContactId__r.MiddleName+&apos;&apos;+ AccountId__r.vlocity_cmt__PersonContactId__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome da Conta</label>
    <type>Text</type>
</CustomField>