force-app/main/default/objects/CartAccount__c/fields/AccountNeighborhood__c.field-meta.xml
<CustomField>
    <fullName>AccountNeighborhood__c</fullName>
    <description>Campo para armazenar o bairro do endereço do cliente consultado no SRE.</description>
    <label>Bairro Cliente</label>
    <length>50</length>
    <type>Text</type>
</CustomField>