force-app/main/default/objects/CartAccount__c/fields/AccountPostalCode__c.field-meta.xml
<CustomField>
    <fullName>AccountPostalCode__c</fullName>
    <description>Campo para armazenar CEP pesquisado e retornado na consulta SRE do endereço do cliente.</description>
    <label>CEP Cliente</label>
    <length>9</length>
    <type>Text</type>
</CustomField>