force-app/main/default/objects/CartAccount__c/fields/AccountState__c.field-meta.xml
<CustomField>
    <fullName>AccountState__c</fullName>
    <description>Campo para armazenar o Logradouro do endereço do cliente consultado no SRE</description>
    <label>Estado Cliente</label>
    <length>40</length>
    <type>Text</type>
</CustomField>