force-app/main/default/objects/CartAccount__c/fields/AccountStreet__c.field-meta.xml
<CustomField>
    <fullName>AccountStreet__c</fullName>
    <description>Campo para armazenar o Logradouro do endereço do cliente consultado no SRE.</description>
    <label>Logradouro Cliente</label>
    <length>40</length>
    <type>Text</type>
</CustomField>