force-app/main/default/objects/CartAccount__c/fields/BankAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>BankAccountNumber__c</fullName>
    <description>Campo para preenchimento do número da conta do banco para a alta Móvel RPA.</description>
    <label>Número da Conta</label>
    <length>15</length>
    <type>Text</type>
</CustomField>