force-app/main/default/objects/CartAccount__c/fields/BankAgency__c.field-meta.xml
<CustomField>
    <fullName>BankAgency__c</fullName>
    <description>Campo para preenchimento da agência do banco para a alta Móvel RPA.</description>
    <label>Agência</label>
    <length>4</length>
    <type>Text</type>
</CustomField>