force-app/main/default/objects/CartAccount__c/fields/BankCode__c.field-meta.xml
<CustomField>
    <fullName>BankCode__c</fullName>
    <description>Campo para preenchimento do código do banco para a alta Móvel RPA.</description>
    <label>Banco</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>021</fullName>
                <label>021 - Banestes</label>
            </value>
            <value>
                <fullName>001</fullName>
                <label>001 - Banco do Brasil</label>
            </value>
            <value>
                <fullName>237</fullName>
                <label>237 - Bradesco</label>
            </value>
            <value>
                <fullName>104</fullName>
                <label>104 - Caixa Econômica Federal</label>
            </value>
            <value>
                <fullName>341</fullName>
                <label>341 - Itaú</label>
            </value>
            <value>
                <fullName>033</fullName>
                <label>033 - Santander</label>
            </value>
            <value>
                <fullName>756</fullName>
                <label>756 - Bancoob</label>
            </value>
            <value>
                <fullName>037</fullName>
                <label>037 - Banpara</label>
            </value>
            <value>
                <fullName>041</fullName>
                <label>041 - Banrisul</label>
            </value>
            <value>
                <fullName>748</fullName>
                <label>748 - Bansicred</label>
            </value>
            <value>
                <fullName>997</fullName>
                <label>997 - Cecred</label>
            </value>
            <value>
                <fullName>389</fullName>
                <label>389 - Mercantil do Brasil</label>
            </value>
            <value>
                <fullName>422</fullName>
                <label>422 - Safra</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>