force-app/main/default/objects/CartAccount__c/fields/BillingCycle__c.field-meta.xml
<CustomField>
    <fullName>BillingCycle__c</fullName>
    <description>Campo para preenchimento do ciclo de vencimento da Alta Móvel RPA.</description>
    <label>Ciclo de Vencimento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>17</fullName>
            </value>
            <value>
                <fullName>26</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>