force-app/main/default/objects/CartAccount__c/fields/Birthdate__c.field-meta.xml
<CustomField>
    <fullName>Birthdate__c</fullName>
    <description>Campo para apresentar data de nascimento na configuração da venda e envio ao RPA.</description>
    <label>Data de Nascimento</label>
    <type>Date</type>
</CustomField>