force-app/main/default/objects/CartAccount__c/fields/BkoNote__c.field-meta.xml
<CustomField>
    <fullName>BkoNote__c</fullName>
    <description>Campo para equipe de Bko informar a observação sobre o pedido de RPA.</description>
    <label>Observações Bko</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>