force-app/main/default/objects/CartAccount__c/fields/BkoReason__c.field-meta.xml
<CustomField>
    <fullName>BkoReason__c</fullName>
    <description>Campo para preenchimento da área de Bko.</description>
    <label>Motivo Bko</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>InvalidDateOfBirth</fullName>
                <label>Data Nascimento inválido</label>
            </value>
            <value>
                <fullName>AddressNotFound</fullName>
                <label>Endereço não localizado</label>
            </value>
            <value>
                <fullName>SimReservationError</fullName>
                <label>Erro para reservar chip</label>
            </value>
            <value>
                <fullName>LiveErrorNext</fullName>
                <label>Erro Vivo Next</label>
            </value>
            <value>
                <fullName>IncorrectFlow</fullName>
                <label>Fluxo incorreto</label>
            </value>
            <value>
                <fullName>OutsideSpDf</fullName>
                <label>Fora de SP/DF</label>
            </value>
            <value>
                <fullName>AlreadyHaveMobile</fullName>
                <label>Já possui móvel</label>
            </value>
            <value>
                <fullName>NoRequestedBelongsVivo</fullName>
                <label>N° solicitado pertence a Vivo</label>
            </value>
            <value>
                <fullName>InvalidMotherName</fullName>
                <label>Nome da mãe inválido</label>
            </value>
            <value>
                <fullName>ImproperOffer</fullName>
                <label>Oferta indevida</label>
            </value>
            <value>
                <fullName>IneligibleOfferNext</fullName>
                <label>Oferta não elegível Next</label>
            </value>
            <value>
                <fullName>Others</fullName>
                <label>Outros</label>
            </value>
            <value>
                <fullName>CreditRestriction</fullName>
                <label>Restrição Crédito</label>
            </value>
            <value>
                <fullName>SystemInoperative</fullName>
                <label>Sistema inoperante</label>
            </value>
            <value>
                <fullName>SuccessfullyIssuedSaleBko</fullName>
                <label>Venda emitida com sucesso Bko</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>