force-app/main/default/objects/CartAccount__c/fields/ChipAmount__c.field-meta.xml
<CustomField>
    <fullName>ChipAmount__c</fullName>
    <description>Campo para preenchimento da quantidade de chip para a alta Móvel RPA.</description>
    <label>Quantidade de Chip</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>