force-app/main/default/objects/CartAccount__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <description>Campo para armazenar o DDD do endereço do cliente consultado no SRE para Alta Móvel RPA.</description>
    <label>DDD</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>