force-app/main/default/objects/CartAccount__c/fields/ContactEmail__c.field-meta.xml
<CustomField>
    <fullName>ContactEmail__c</fullName>
    <description>Campo para preenchimento do email do cliente para contato na configuração da venda e envio ao RPA.</description>
    <label>E-mail de Contato</label>
    <type>Email</type>
</CustomField>