force-app/main/default/objects/CartAccount__c/fields/ContactPhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>ContactPhoneNumber__c</fullName>
    <description>Campo para preenchimento do telefone do cliente para contato.</description>
    <label>Telefone de Contato</label>
    <type>Phone</type>
</CustomField>