force-app/main/default/objects/CartAccount__c/fields/CustomerInteractionId__c.field-meta.xml
<CustomField>
    <fullName>CustomerInteractionId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Protocolo</label>
    <referenceTo>vlocity_cmt__CustomerInteraction__c</referenceTo>
    <relationshipLabel>Ofertas Oferecidas</relationshipLabel>
    <relationshipName>Ofertas_Oferecidas</relationshipName>
    <type>Lookup</type>
</CustomField>