force-app/main/default/objects/CartAccount__c/fields/CustomerSegment__c.field-meta.xml
<CustomField>
    <fullName>CustomerSegment__c</fullName>
    <description>Segmento do cliente no momento da criação do registro de Carrinho</description>
    <label>Segmento do Cliente</label>
    <length>100</length>
    <type>Text</type>
</CustomField>