force-app/main/default/objects/CartAccount__c/fields/CustomerType__c.field-meta.xml
<CustomField>
    <fullName>CustomerType__c</fullName>
    <description>Tipo do cliente no momento da criação do registro de Carrinho</description>
    <label>Tipo do Cliente</label>
    <length>100</length>
    <type>Text</type>
</CustomField>