force-app/main/default/objects/CartAccount__c/fields/CustomerWhitelist__c.field-meta.xml
<CustomField>
    <fullName>CustomerWhitelist__c</fullName>
    <description>Whitelist do cliente no momento da criação do registro de Carrinho</description>
    <label>Whitelist do Cliente</label>
    <length>100</length>
    <type>Text</type>
</CustomField>