force-app/main/default/objects/CartAccount__c/fields/DeliveryAdressId__c.field-meta.xml
<CustomField>
    <fullName>DeliveryAdressId__c</fullName>
    <description>Campo para armazenar o ID do endereço de entrega do cliente consultado no SRE.</description>
    <label>Id Endereço Entrega</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>