force-app/main/default/objects/CartAccount__c/fields/DeliveryAdressNumber__c.field-meta.xml
<CustomField>
    <fullName>DeliveryAdressNumber__c</fullName>
    <description>Campo para armazenar o número do endereço do cliente consultado no SRE.</description>
    <label>Número Endereço Entrega</label>
    <length>6</length>
    <type>Text</type>
</CustomField>