force-app/main/default/objects/CartAccount__c/fields/DeliveryCity__c.field-meta.xml
<CustomField>
    <fullName>DeliveryCity__c</fullName>
    <description>Campo para armazenar a cidade do endereço de entrega consultado no SRE.</description>
    <label>Cidade Entrega</label>
    <length>40</length>
    <type>Text</type>
</CustomField>