force-app/main/default/objects/CartAccount__c/fields/DeliveryComplementDescription__c.field-meta.xml
<CustomField>
    <fullName>DeliveryComplementDescription__c</fullName>
    <description>Descrição do Complemento do Endereço de entrega</description>
    <label>Descrição Complemento Entrega</label>
    <length>10</length>
    <type>Text</type>
</CustomField>