force-app/main/default/objects/CartAccount__c/fields/DeliveryFirstComplement__c.field-meta.xml
<CustomField>
    <fullName>DeliveryFirstComplement__c</fullName>
    <description>Campo para guardar valor do Complemento do endereço de entrega RPA</description>
    <label>Complemento Entrega</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AC</fullName>
                <label>Acesso</label>
            </value>
            <value>
                <fullName>AL</fullName>
                <label>Altos</label>
            </value>
            <value>
                <fullName>ALTURA</fullName>
                <label>Altura</label>
            </value>
            <value>
                <fullName>AND</fullName>
                <label>Andar</label>
            </value>
            <value>
                <fullName>ANTIGA</fullName>
                <label>Antiga</label>
            </value>
            <value>
                <fullName>ANTIGO</fullName>
                <label>Antigo</label>
            </value>
            <value>
                <fullName>AP</fullName>
                <label>Apartamento</label>
            </value>
            <value>
                <fullName>AR</fullName>
                <label>Arco</label>
            </value>
            <value>
                <fullName>AM</fullName>
                <label>Armazém</label>
            </value>
            <value>
                <fullName>AT</fullName>
                <label>Ato</label>
            </value>
            <value>
                <fullName>AV</fullName>
                <label>Avenida</label>
            </value>
            <value>
                <fullName>BX</fullName>
                <label>Baixos</label>
            </value>
            <value>
                <fullName>BC</fullName>
                <label>Beco</label>
            </value>
            <value>
                <fullName>BL</fullName>
                <label>Bloco</label>
            </value>
            <value>
                <fullName>BOX</fullName>
                <label>Box</label>
            </value>
            <value>
                <fullName>CA</fullName>
                <label>Cais</label>
            </value>
            <value>
                <fullName>CX POSTAL</fullName>
                <label>Caixa Postal</label>
            </value>
            <value>
                <fullName>CALC</fullName>
                <label>Calçadão</label>
            </value>
            <value>
                <fullName>CMH</fullName>
                <label>Caminho</label>
            </value>
            <value>
                <fullName>CAMPUS</fullName>
                <label>Campus</label>
            </value>
            <value>
                <fullName>CS</fullName>
                <label>Casa</label>
            </value>
            <value>
                <fullName>CH</fullName>
                <label>Chácara</label>
            </value>
            <value>
                <fullName>COB</fullName>
                <label>Cobertura</label>
            </value>
            <value>
                <fullName>COL</fullName>
                <label>Colônia</label>
            </value>
            <value>
                <fullName>COMPART</fullName>
                <label>Compartimento</label>
            </value>
            <value>
                <fullName>COMPLEMENTO</fullName>
                <label>Complemento</label>
            </value>
            <value>
                <fullName>COMPLEX</fullName>
                <label>Complexo</label>
            </value>
            <value>
                <fullName>COM</fullName>
                <label>Comunidade</label>
            </value>
            <value>
                <fullName>COND</fullName>
                <label>Condomínio</label>
            </value>
            <value>
                <fullName>CON RES</fullName>
                <label>Condomínio Residencial</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>