force-app/main/default/objects/CartAccount__c/fields/DeliveryNeighborhood__c.field-meta.xml
<CustomField>
    <fullName>DeliveryNeighborhood__c</fullName>
    <description>Campo para armazenar a descrição do bairro do endereço de entrega consultado no SRE.</description>
    <label>Bairro Entrega</label>
    <length>50</length>
    <type>Text</type>
</CustomField>