force-app/main/default/objects/CartAccount__c/fields/DeliveryPostalCode__c.field-meta.xml
<CustomField>
    <fullName>DeliveryPostalCode__c</fullName>
    <description>Campo para armazenar o CEP do endereço de entrega consultado no SRE.</description>
    <label>CEP Entrega</label>
    <length>9</length>
    <type>Text</type>
</CustomField>