force-app/main/default/objects/CartAccount__c/fields/DeliveryStreet__c.field-meta.xml
<CustomField>
    <fullName>DeliveryStreet__c</fullName>
    <label>Logradouro Entrega</label>
    <length>40</length>
    <type>Text</type>
</CustomField>