force-app/main/default/objects/CartAccount__c/fields/DeliveyState__c.field-meta.xml
<CustomField>
    <fullName>DeliveyState__c</fullName>
    <description>Campo para armazenar o estado do endereço de entrega consultado no SRE.</description>
    <label>Estado Entrega</label>
    <length>40</length>
    <type>Text</type>
</CustomField>