force-app/main/default/objects/CartAccount__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Campo para armazenar a descrição da Oferta de Ações Recomendadas aceita ou recusada.</description>
    <label>Descrição</label>
    <length>255</length>
    <type>Text</type>
</CustomField>