force-app/main/default/objects/CartAccount__c/fields/FirstComplementDescription__c.field-meta.xml
<CustomField>
    <fullName>FirstComplementDescription__c</fullName>
    <description>Campo para armazenar a descrição do complemento 1 do endereço do cliente consultado no SRE.</description>
    <label>Descrição Complemento 1</label>
    <length>10</length>
    <type>Text</type>
</CustomField>