force-app/main/default/objects/CartAccount__c/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <description>Campo para preenchimento do sexo do cliente na configuração da venda e envio ao RPA.</description>
    <label>Sexo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FEMININO</fullName>
                <label>Feminino</label>
            </value>
            <value>
                <fullName>MASCULINO</fullName>
                <label>Masculino</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>