force-app/main/default/objects/CartAccount__c/fields/Latitude__c.field-meta.xml
<CustomField>
    <fullName>Latitude__c</fullName>
    <description>Campo para armazenar a latitude do endereço do cliente consultado no SRE.</description>
    <label>Latitude</label>
    <length>20</length>
    <type>Text</type>
</CustomField>