force-app/main/default/objects/CartAccount__c/fields/LocationCode__c.field-meta.xml
<CustomField>
    <fullName>LocationCode__c</fullName>
    <description>Carmpo para armazenar o Código CNL retornado pelo SRE na Alta Móvel RPA.</description>
    <label>Código CNL</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>