force-app/main/default/objects/CartAccount__c/fields/LocationType__c.field-meta.xml
<CustomField>
    <fullName>LocationType__c</fullName>
    <description>Campo para armazenar o Código IBGE retornado na consulta SRE da Alta Móvel RPA.</description>
    <label>Código IBGE</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>