force-app/main/default/objects/CartAccount__c/fields/Longitude__c.field-meta.xml
<CustomField>
    <fullName>Longitude__c</fullName>
    <description>Campo para armazenar a longitude do endereço do cliente consultado no SRE.</description>
    <label>Longitude</label>
    <length>20</length>
    <type>Text</type>
</CustomField>