force-app/main/default/objects/CartAccount__c/fields/MotherName__c.field-meta.xml
<CustomField>
    <fullName>MotherName__c</fullName>
    <description>Campo para preenchimento do nome da mãe na configuração da venda e envio ao RPA.</description>
    <label>Nome da Mãe</label>
    <length>90</length>
    <type>Text</type>
</CustomField>