force-app/main/default/objects/CartAccount__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <displayFormat>OF-{00000000}</displayFormat>
    <label>Id Oferta Oferecida</label>
    <type>AutoNumber</type>
</CustomField>