force-app/main/default/objects/CartAccount__c/fields/OfferId__c.field-meta.xml
<CustomField>
    <fullName>OfferId__c</fullName>
    <externalId>true</externalId>
    <label>Id da Oferta</label>
    <length>50</length>
    <type>Text</type>
</CustomField>