force-app/main/default/objects/CartAccount__c/fields/OfferType__c.field-meta.xml
<CustomField>
    <fullName>OfferType__c</fullName>
    <description>Campo para salvar o tipo da oferta selecionado pelo usuário.</description>
    <label>Tipo Oferta</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TechnologyMigration</fullName>
            </value>
            <value>
                <fullName>Speed​​Upgrade</fullName>
            </value>
            <value>
                <fullName>RPA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>