force-app/main/default/objects/CartAccount__c/fields/OperationCode__c.field-meta.xml
<CustomField>
    <fullName>OperationCode__c</fullName>
    <description>Campo para preenchimento do código da operação para a alta Móvel RPA.</description>
    <label>Código de Operação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>001</fullName>
                <label>001 - Conta Corrente</label>
            </value>
            <value>
                <fullName>002</fullName>
                <label>002 - Conta Simples</label>
            </value>
            <value>
                <fullName>003</fullName>
                <label>003 - Pessoa Jurídica</label>
            </value>
            <value>
                <fullName>013</fullName>
                <label>013 - Poupança</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>