force-app/main/default/objects/CartAccount__c/fields/OptInContactByPhone__c.field-meta.xml
<CustomField>
    <fullName>OptInContactByPhone__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para preenchimento se cliente autoriza contato telefônico para a alta Móvel RPA.</description>
    <label>Autoriza Contato Telefônico</label>
    <type>Checkbox</type>
</CustomField>