force-app/main/default/objects/CartAccount__c/fields/OrderNext__c.field-meta.xml
<CustomField>
    <fullName>OrderNext__c</fullName>
    <description>Campo para armazenar número do pedido gerado no Next pelo fluxo do RPA. Valor preenchido com o response da chamada consultaId do RPA.</description>
    <label>N° Pedido Next</label>
    <length>15</length>
    <type>Text</type>
</CustomField>