force-app/main/default/objects/CartAccount__c/fields/OwnerAccount__c.field-meta.xml
<CustomField>
    <fullName>OwnerAccount__c</fullName>
    <description>Campo para preenchimento do titular da conta para a alta Móvel RPA.</description>
    <label>Titular da Conta</label>
    <length>30</length>
    <type>Text</type>
</CustomField>