force-app/main/default/objects/CartAccount__c/fields/Papel__c.field-meta.xml
<CustomField>
    <fullName>Papel__c</fullName>
    <formula>CreatedBy.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Papel</label>
    <type>Text</type>
</CustomField>