force-app/main/default/objects/CartAccount__c/fields/PaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>PaymentMethod__c</fullName>
    <description>Campo para preenchimento da forma de pagamento da Alta Móvel RPA.</description>
    <label>Forma de Pagamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ticket</fullName>
                <label>Boleto</label>
            </value>
            <value>
                <fullName>AutomaticDebit</fullName>
                <label>Débito Automático</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>