force-app/main/default/objects/CartAccount__c/fields/PermanentDeliveryMethod__c.field-meta.xml
<CustomField>
    <fullName>PermanentDeliveryMethod__c</fullName>
    <description>Campo para preenchimento do Método de entrega Permanente para envio ao RPA.</description>
    <label>Método de entrega Permanente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>PrintedPaper</fullName>
                <label>Papel Impresso</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>