force-app/main/default/objects/CartAccount__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <description>Campo para armazenar a mensagem de retorno do RPA.</description>
    <label>Motivo</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>